--- a/lojadediscos/src/main/resources/static/Login.html
+++ b/lojadediscos/src/main/resources/static/Login.html
@@ -7,11 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Buscar Disco</h1>
-    <hr />
-    <form action="/doBuscar" method="post">
-        Digite o id: <input type="text" name="id">
-        <button type="submit">Buscar</button>
+    <h1>Login</h1>
+    <hr/>
+    <br>
+    <form method="post" action="/doLogin">
+       Usuário: <input type="text" name="username">
+       Senha: <input type="password" name="senha">
+       <button type="submit">Entrar</button>
     </form>
+
 </body>
 </html>
